--- a/NotesApp/App.config
+++ b/NotesApp/App.config
@@ -3,7 +3,7 @@
 	<connectionStrings>
 		<add name="NotesAppConnectionString"
 		connectionString="
-			Server=;
+			Server=DESKTOP-CJR0KFM\SQLEXPRESS;
 			Database=NotesDB;
 			Trusted_Connection=True;"
 		providerName="System.Data.SqlClient"/>
