--- a/NotesApp/NotesApp.csproj
+++ b/NotesApp/NotesApp.csproj
@@ -10,11 +10,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Domain\DomainModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="styleConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
